--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,6 +1,6 @@
 <h1>Edit {{course.title}}</h1>
 
-<form action="/courses/edit" method="POST">
+<form action="/courses/edit" method="POST" class="edit-course">
     <div class="input-field">
         <input id="title" name="title" type="text" class="validate" required value="{{course.title}}">
         <label for="title">Course name</label>
@@ -21,4 +21,9 @@
     <input type="hidden" name="id" value="{{course.id}}">
 
     <button class="btn btn-primary">Edit course</button>
+</form>
+
+<form action="/courses/remove" method="POST">
+    <input type="hidden" name="id" value="{{course.id}}">
+    <button type="submit" class="btn red">Delete</button>
 </form>
