--- a/views/card.hbs
+++ b/views/card.hbs
@@ -24,6 +24,9 @@
     </table>
 
     <p><strong>Pice:</strong> <span class="price">{{price}}</span></p>
+    <form action="/orders" method="POST">
+        <button type="submit" class="btn">Create order</button>
+    </form>
     {{else}}
     <p>Card is empty</p>
     {{/if}}
