--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,31 +1,36 @@
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        {{#if isHome}}
-            <li class="active"><a href="/">Home</a></li>
-        {{else}}
-            <li><a href="/">Home</a></li>
-        {{/if}}
+<nav>
+     <div class="nav-wrapper">
+          <a href="#" class="brand-logo">Logo</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+               {{#if isHome}}
+               <li class="active"><a href="/">Home</a></li>
+               {{else}}
+               <li><a href="/">Home</a></li>
+               {{/if}}
 
-        {{#if isCourses}}
-            <li class="active"><a href="/courses">Courses</a></li>
-        {{else}}
-             <li><a href="/courses">Courses</a></li>
-        {{/if}}
+               {{#if isCourses}}
+               <li class="active"><a href="/courses">Courses</a></li>
+               {{else}}
+               <li><a href="/courses">Courses</a></li>
+               {{/if}}
 
-        {{#if isAdd}}
-             <li class="active"><a href="/add">Add course</a></li>
-        {{else}}
-             <li><a href="/add">Add course</a></li>
-        {{/if}}
+               {{#if isAdd}}
+               <li class="active"><a href="/add">Add course</a></li>
+               {{else}}
+               <li><a href="/add">Add course</a></li>
+               {{/if}}
 
-        {{#if isCard}}
-             <li class="active"><a href="/card">Card</a></li>
-        {{else}}
-             <li><a href="/card">Card</a></li>
-        {{/if}}
-      </ul>
-    </div>
-  </nav>
-        
+               {{#if isCard}}
+               <li class="active"><a href="/card">Card</a></li>
+               {{else}}
+               <li><a href="/card">Card</a></li>
+               {{/if}}
+
+               {{#if isOrders}}
+               <li class="active"><a href="/orders">Orders</a></li>
+               {{else}}
+               <li><a href="/orders">Orders</a></li>
+               {{/if}}
+          </ul>
+     </div>
+</nav>
