Implemented regestration and log in

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -40,9 +40,15 @@
                 </div>
 
                 <div class="input-field">
-                    <input id="rpassword" name="password" type="password" class="validate" required>
-                    <label for="rpassword">Repeat password</label>
+                    <input id="confirm" name="confirm" type="password" class="validate" required>
+                    <label for="confirm">Repeat password</label>
                     <span class="helper-text" data-error="Input password"></span>
+                </div>
+
+                <div class="input-field">
+                    <input id="name" name="name" type="text" class="validate" required>
+                    <label for="name">Name</label>
+                    <span class="helper-text" data-error="Input name"></span>
                 </div>
 
                 <button class="btn btn-primary" type="submit">Create an account</button>
