--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -23,7 +23,8 @@
                         <p class="alert">{{loginError}}</p>
                     {{/if}}
                 </div>
-
+                
+                <p><a href="/auth/reset">Forgot password?</a></p>
                 <input type="hidden" name="_csrf" value="{{csrf}}">
 
                 <button class="btn btn-primary" type="submit">Log In</button>
