--- a/views/addCourse.hbs
+++ b/views/addCourse.hbs
@@ -1,23 +1,27 @@
+{{#if error}}
+<p class="alert">{{error}}</p>
+{{/if}}
+
 <h1>Add Course</h1>
 
-<form action="/add" method="POST">
+<form action="/add" method="POST" novalidate>
     <div class="input-field">
-        <input id="title" name="title" type="text" class="validate" required>
+        <input id="title" name="title" type="text" class="validate" value="{{data.title}}" required>
         <label for="title">Course name</label>
         <span class="helper-text" data-error="Input name"></span>
     </div>
 
     <div class="input-field">
-        <input id="price" name="price" type="number" class="validate" required min="1">
+        <input id="price" name="price" type="number" class="validate" value="{{data.price}}" required min="1">
         <label for="price">Price</label>
         <span class="helper-text" data-error="Input price"></span>
     </div>
 
     <div class="input-field">
-        <input id="img" name="img" type="text" class="validate">
+        <input id="img" name="img" type="text" class="validate" value="{{data.img}}">
         <label for="img">Add img</label>
     </div>
-    
+
     <input type="hidden" name="_csrf" value="{{csrf}}">
 
     <button class="btn btn-primary">Add course</button>
