--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,8 +7,11 @@
             </ul>
         </div>
         <div id="login" class="col s6 offset-s3">
+            {{#if loginError}}
+            <p class="alert">{{loginError}}</p>
+            {{/if}}
             <h1>Log In</h1>
-            <form action="/auth/login" method="POST">
+            <form action="/auth/login" method="POST" novalidate>
                 <div class="input-field">
                     <input id="email" name="email" type="email" class="validate" required>
                     <label for="email">Email</label>
@@ -19,11 +22,8 @@
                     <input id="password" name="password" type="password" class="validate" required>
                     <label for="password">Password</label>
                     <span class="helper-text" data-error="Input password"></span>
-                    {{#if loginError}}
-                        <p class="alert">{{loginError}}</p>
-                    {{/if}}
                 </div>
-                
+
                 <p><a href="/auth/reset">Forgot password?</a></p>
                 <input type="hidden" name="_csrf" value="{{csrf}}">
 
@@ -31,15 +31,15 @@
             </form>
         </div>
         <div id="register" class="col s6 offset-s3">
+            {{#if registerError}}
+            <p class="alert">{{registerError}}</p>
+            {{/if}}
             <h1>Registration</h1>
-            <form action="/auth/register" method="POST">
+            <form action="/auth/register" method="POST" novalidate>
                 <div class="input-field">
                     <input id="remail" name="email" type="email" class="validate" required>
                     <label for="remail">Email</label>
                     <span class="helper-text" data-error="Input email"></span>
-                     {{#if registerError}}
-                        <p class="alert">{{registerError}}</p>
-                    {{/if}}
                 </div>
 
                 <div class="input-field">
