--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,6 +1,10 @@
+{{#if error}}
+<p class="alert">{{error}}</p>
+{{/if}}
+
 <h1>Edit {{course.title}}</h1>
 
-<form action="/courses/edit" method="POST" class="edit-course">
+<form action="/courses/edit" method="POST" class="edit-course" novalidate>
     <div class="input-field">
         <input id="title" name="title" type="text" class="validate" required value="{{course.title}}">
         <label for="title">Course name</label>
